Updated build script and fixed missing _32 @ Installation

--- a/userDoc/UserManual.tex
+++ b/userDoc/UserManual.tex
@@ -73,7 +73,7 @@
 					\hline
 					macOS & x86-64 & os.osx.x86\_64 \\
 					\hline
-					Linux & x86 & os.linux.x86 \\
+					Linux & x86 & os.linux.x86\_32 \\
 					 & x86-64 & os.linux.x86\_64
 				\end{tabular}
 			\end{center}
