Fixed broken quotation marks

--- a/userDoc/UserManual.tex
+++ b/userDoc/UserManual.tex
@@ -82,7 +82,7 @@
 			Anschließend führen sie die Datei mit dem Namen “launchBJS.bat” (Windows) bzw. “launchBJS.sh” (Linux, macOS) aus. Es öffnet sich ein Fenster, in welchem Sie die Informationen über den aktuellen Status des Servers ablesen können. Dort finden sie u.a. auch das Administratorpasswort, mit welchem sie Wettkämpfe konfigurieren können. Beziehen Sie sich hierzu auf den Abschnitt “Erstkonfiguration der Bundesjugendspiele”.
 			
 		\section{Deinstallation}
-			Um "RunItEasy” von ihrem Server zu deinstallieren, löschen sie den Ordner, welchen Sie heruntergeladen haben und befolgen sie die Anweisungen zur Deinstallation auf den offiziellen Seiten von NodeJS und MongoDB. Die Hyperlinks zu diesen finden Sie im Bereich “Erstinstallation” dieses Abschnittes.
+			Um ''RunItEasy'' von ihrem Server zu deinstallieren, löschen sie den Ordner, welchen Sie heruntergeladen haben und befolgen sie die Anweisungen zur Deinstallation auf den offiziellen Seiten von NodeJS und MongoDB. Die Hyperlinks zu diesen finden Sie im Bereich “Erstinstallation” dieses Abschnittes.
 		
 	\newpage
 		
@@ -120,7 +120,7 @@
 	\part{Nutzung}
 		\section{Konfiguration}
 			\begin{enumerate}
-				\item Öffnen sie die Anwendung "RunItEasy", indem sie auf dem zuvor in Abschnitt \ref{install} eingerichteten Server eine Browseranwendung (Chrome, Firefox, Safari) öffnen und \href{http://localhost:8080/}{\underline{\color{blue}localhost:8080}} in die Adresszeile eingeben. Sie sollten daraufhin die nachfolgende Anmeldeseite erreicht haben.\\
+				\item Öffnen sie die Anwendung ''RunItEasy'', indem sie auf dem zuvor in Abschnitt \ref{install} eingerichteten Server eine Browseranwendung (Chrome, Firefox, Safari) öffnen und \href{http://localhost:8080/}{\underline{\color{blue}localhost:8080}} in die Adresszeile eingeben. Sie sollten daraufhin die nachfolgende Anmeldeseite erreicht haben.\\
 				\includegraphics[width=\textwidth]{Login}
 				
 				\item Um die Konfiguration zu starten, klicken sie auf \texttt{Administratorzugriff} und geben sie das Passwort ein, was ihnen in der Serverkonsole (siehe \nameref{install}) ausgegeben wurde.
